C++/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
17:11:30 **** Rebuild of configuration Debug for project Ders12  Sizeof ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ders12.o" "..\\src\\Ders12.cpp" 
g++ -o "Ders12  Sizeof.exe" "src\\Ders12.o" 
Info: Nothing to build for Ders12  Sizeof
17:12:17 **** Incremental Build of configuration Debug for project Ders12  Sizeof ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ders12.o" "..\\src\\Ders12.cpp" 
..\src\Ders12.cpp: In function 'int main()':
..\src\Ders12.cpp:27:53: error: expected primary-expression before '.' token
   27 |  cout << endl <<"Struct bellekte " << sizeof(student.a) << " byte yer kaplar" << endl;
      |                                                     ^
17:13:12 **** Incremental Build of configuration Debug for project Ders12  Sizeof ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ders12.o" "..\\src\\Ders12.cpp" 
g++ -o "Ders12  Sizeof.exe" "src\\Ders12.o" 
17:13:25 **** Incremental Build of configuration Debug for project Ders12  Sizeof ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ders12.o" "..\\src\\Ders12.cpp" 
g++ -o "Ders12  Sizeof.exe" "src\\Ders12.o" 
Info: Nothing to build for Ders12  Sizeof
Info: Nothing to build for Ders12  Sizeof
Info: Nothing to build for Ders12  Sizeof
Info: Nothing to build for Ders12  Sizeof
Info: Nothing to build for Ders12  Sizeof
17:16:28 **** Incremental Build of configuration Debug for project Ders12  Sizeof ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ders12.o" "..\\src\\Ders12.cpp" 
g++ -o "Ders12  Sizeof.exe" "src\\Ders12.o" 
Info: Nothing to build for Ders12  Sizeof
Info: Nothing to build for Ders12  Sizeof
17:16:56 **** Incremental Build of configuration Debug for project Ders12  Sizeof ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ders12.o" "..\\src\\Ders12.cpp" 
g++ -o "Ders12  Sizeof.exe" "src\\Ders12.o" 
